[package]
name = "ImageSharing"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
nanoid = "0.4.0"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde = "1.0.228"
dotenv = "0.15.0"
axum_typed_multipart = "0.16.4"
serde_json = "1.0.145"
image = "0.25.8"
tokio-util = {version = "0.7.17",features = ["io"]}
