[package]
name = "ImageSharing"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
nanoid = "0.4.0"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
dotenv = "0.15.0"
axum_typed_multipart = "0.16.4"
image = "0.25.8"
tokio-util = {version = "0.7.17",features = ["io"]}

[target.'cfg(all(target_env = "musl", not(target_os = "macos")))'.dependencies]
mimalloc = { version = "0.1", default-features = false }